--- a/templates/cliente/edit.html.twig
+++ b/templates/cliente/edit.html.twig
@@ -1,13 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Cliente{% endblock %}
+{% block title %}Editar Cliente{% endblock %}
 
 {% block body %}
-    <h1>Edit Cliente</h1>
+    {{ parent() }}
+    <h1>Editar Cliente</h1>
 
-    {{ include('cliente/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('cliente/_form.html.twig', {'button_label': 'Update'}) }} <br>
 
-    <a href="{{ path('cliente_index') }}">back to list</a>
+    <a class="btn btn-primary" href="{{ path('cliente_index') }}">Volver al listado</a> <hr>
 
     {{ include('cliente/_delete_form.html.twig') }}
 {% endblock %}
