--- a/templates/cliente/index.html.twig
+++ b/templates/cliente/index.html.twig
@@ -3,43 +3,47 @@
 {% block title %}Cliente index{% endblock %}
 
 {% block body %}
-    <h1>Cliente index</h1>
+    {{ parent() }}
+    <h1>Clientes</h1>
+    <div class="container-fluid" >
+        <div class="row" >
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Nombres</th>
+                        <th>Apellidos</th>
+                        <th>Cedula</th>
+                        <th>Correo</th>
+                        <th>Direccion</th>
+                        <th>Telefono</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for cliente in clientes %}
+                    <tr>
+                        <td>{{ cliente.id }}</td>
+                        <td>{{ cliente.nombresCliente }}</td>
+                        <td>{{ cliente.apellidosCliente }}</td>
+                        <td>{{ cliente.cedulaCliente }}</td>
+                        <td>{{ cliente.correoCliente }}</td>
+                        <td>{{ cliente.direccionCliente }}</td>
+                        <td>{{ cliente.telefonoCliente }}</td>
+                        <td>
+                            <a href="{{ path('cliente_show', {'id': cliente.id}) }}"> <img src="{{ asset('img/busqueda.png') }}" > mostrar</a><br>
+                            <a href="{{ path('cliente_edit', {'id': cliente.id}) }}"><img src="{{ asset('img/editar.png') }}" > editar</a>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="8">No se encontraron registros</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nombres_cliente</th>
-                <th>Apellidos_cliente</th>
-                <th>Cedula_cliente</th>
-                <th>Correo_cliente</th>
-                <th>Direccion_cliente</th>
-                <th>Telefono_cliente</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for cliente in clientes %}
-            <tr>
-                <td>{{ cliente.id }}</td>
-                <td>{{ cliente.nombresCliente }}</td>
-                <td>{{ cliente.apellidosCliente }}</td>
-                <td>{{ cliente.cedulaCliente }}</td>
-                <td>{{ cliente.correoCliente }}</td>
-                <td>{{ cliente.direccionCliente }}</td>
-                <td>{{ cliente.telefonoCliente }}</td>
-                <td>
-                    <a href="{{ path('cliente_show', {'id': cliente.id}) }}">show</a>
-                    <a href="{{ path('cliente_edit', {'id': cliente.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('cliente_new') }}">Create new</a>
+    <a class="btn btn-primary" href="{{ path('cliente_new') }}">Crear nuevo cliente</a>
 {% endblock %}
