--- a/templates/cliente/new.html.twig
+++ b/templates/cliente/new.html.twig
@@ -3,9 +3,12 @@
 {% block title %}New Cliente{% endblock %}
 
 {% block body %}
-    <h1>Create new Cliente</h1>
+    {{ parent() }}
+    <h1>Crear nuevo Cliente</h1>
 
     {{ include('cliente/_form.html.twig') }}
 
-    <a href="{{ path('cliente_index') }}">back to list</a>
+    <hr>
+
+    <a class="btn btn-outline-primary" href="{{ path('cliente_index') }}">Regresar al listado</a>
 {% endblock %}
