--- a/templates/cliente/show.html.twig
+++ b/templates/cliente/show.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Cliente{% endblock %}
 
 {% block body %}
+    {{ parent() }}
     <h1>Cliente</h1>
 
     <table class="table">
@@ -38,9 +39,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('cliente_index') }}">back to list</a>
+    <a class="btn btn-outline-primary" href="{{ path('cliente_index') }}">Volver al listado</a>
 
-    <a href="{{ path('cliente_edit', {'id': cliente.id}) }}">edit</a>
+    <a class="btn btn-outline-primary" href="{{ path('cliente_edit', {'id': cliente.id}) }}">Editar</a> <hr>
 
     {{ include('cliente/_delete_form.html.twig') }}
 {% endblock %}
