--- a/templates/administracion/index.html.twig
+++ b/templates/administracion/index.html.twig
@@ -30,6 +30,10 @@
                         <td>Sala</td>
                         <td><a class="btn btn-outline-secondary" href="{{ path('sala_index') }}" >Administrar S</a></td>
                         </tr>
+                        <th scope="row">3</th>
+                        <td>Reserva</td>
+                        <td><a class="btn btn-outline-secondary" href="{{ path('reserva_index') }}" >Administrar R</a></td>
+                        </tr>
                     </tbody>
                 </table>
             {# </div> #}
