--- a/templates/cliente/show.html.twig
+++ b/templates/cliente/show.html.twig
@@ -13,27 +13,27 @@
                 <td>{{ cliente.id }}</td>
             </tr>
             <tr>
-                <th>Nombres_cliente</th>
+                <th>Nombres cliente</th>
                 <td>{{ cliente.nombresCliente }}</td>
             </tr>
             <tr>
-                <th>Apellidos_cliente</th>
+                <th>Apellidos cliente</th>
                 <td>{{ cliente.apellidosCliente }}</td>
             </tr>
             <tr>
-                <th>Cedula_cliente</th>
+                <th>Cedula cliente</th>
                 <td>{{ cliente.cedulaCliente }}</td>
             </tr>
             <tr>
-                <th>Correo_cliente</th>
+                <th>Correo cliente</th>
                 <td>{{ cliente.correoCliente }}</td>
             </tr>
             <tr>
-                <th>Direccion_cliente</th>
+                <th>Direccion cliente</th>
                 <td>{{ cliente.direccionCliente }}</td>
             </tr>
             <tr>
-                <th>Telefono_cliente</th>
+                <th>Telefono cliente</th>
                 <td>{{ cliente.telefonoCliente }}</td>
             </tr>
         </tbody>
