--- a/templates/cliente/index.html.twig
+++ b/templates/cliente/index.html.twig
@@ -8,7 +8,7 @@
     <div class="container-fluid" >
         <div class="row" >
             <table class="table">
-                <thead>
+                <thead class="thead-dark">
                     <tr>
                         <th>Id</th>
                         <th>Nombres</th>
