--- a/templates/sala/index.html.twig
+++ b/templates/sala/index.html.twig
@@ -9,7 +9,7 @@
     <div class="container" >
         <div class="row" >
             <table class="table">
-                <thead>
+                <thead class="thead-dark">
                     <tr>
                         <th>Id</th>
                         <th>Nombre</th>
