--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -16,7 +16,7 @@
     {% else %}
 
     <div class="container" >
-    <h1 class="h3 mb-3 font-weight-normal">Por favor ingresa</h1><hr>
+    <h1 class="h3 mb-3 m-5 font-weight-normal">Por favor ingresa</h1><hr>
         <div class="row div_angosta" >
 
             
