--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
                 <div class="collapse navbar-collapse " id="navbarText">
                     <ul class="navbar-nav mr-auto ">
                         <li class="nav-item active">
-                            <a class="nav-link" href="{{ path('inicio') }}">Inicio <span class="sr-only">(current)</span></a>
+                            <a id="boton_inicio" v-bind:title="message" class="nav-link" href="{{ path('inicio') }}">Inicio <span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
@@ -23,7 +23,7 @@
                         {% if app.user %}
 
                             <li class="dropdown">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <button id="opciones_usuario" v-bind:title="message" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     {{ app.user.email }}
                                 </button>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -49,6 +49,8 @@
             <script src="{{ asset('js/jquery-3.3.1.slim.min.js') }}" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="{{ asset('js/popper.min.js') }}" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
             <script src="{{ asset('js/bootstrap.min.js') }}" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> <script src = 'https://cdn.jsdelivr.net/npm/vue/dist/vue.js'> </script> 
+            <script src="{{ asset('js/myjs.js') }}" ></script>
         {% endblock %}
     </body>
 </html>
