--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
     {{ parent() }}
-    <h1>Register</h1>
-
+    <h1>Registrarse</h1>
+    <div class="myform" >
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword) }}
@@ -13,4 +13,5 @@
 
         <button class="btn">Register</button>
     {{ form_end(registrationForm) }}
+    </div>
 {% endblock %}
