--- a/templates/reserva/_form.html.twig
+++ b/templates/reserva/_form.html.twig
@@ -1,4 +1,6 @@
+<div class="myform" >
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button id="crear"  v-on:click="visualizar" class="btn btn-success">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
+</div>
