--- a/templates/sala/show.html.twig
+++ b/templates/sala/show.html.twig
@@ -21,7 +21,7 @@
 
     <a class="btn btn-outline-primary" href="{{ path('sala_index') }}">Volver al listado</a>
 
-    <a class="btn btn-outline-primary" href="{{ path('sala_edit', {'id': sala.id}) }}">edit</a>
+    <a class="btn btn-outline-primary" href="{{ path('sala_edit', {'id': sala.id}) }}">editar</a>
 
     {{ include('sala/_delete_form.html.twig') }}
 {% endblock %}
